# prjpeppercorn

gatemate/: chip.py
libgm/: CMakeLists.txt
libgm/tools/: gmpack.cpp  gmunpack.cpp
